gobmkida/g2/compute_surrounding_moyo_sizes
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/compute_surrounding_moyo_sizes/src/engine/dragon.c:2453:25: error: use of undeclared identifier 'byte_A12ADF'
v10 = ( unsigned __int8)byte_A12ADF[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/compute_surrounding_moyo_sizes/src/obj/1/dragon.o] Error 1
